# awesome-bupt-scs

./: 404.html  Advanced-Labs-in-Compilers.html  Advanced-Labs-in-Computer-Architecture.html  Advanced-Labs-in-Computer-Networks.html  Advanced-Labs-in-Database.html  Advanced-Labs-in-Operating-Systems.html  C++.html  Compilers.html  Computer-Architecture.html  Computer-Networks.html  Computer-Organization.html  Data-Structures.html  Database.html  Info-Know.html  Introduction-to-Computing-and-Foundation-of-Programming.html  LICENSE  Linux.html  Mobile-Internet-Technology-and-Application.html  NLP.html  Network-Practice.html  Operating-Systems.html  Program-Practice.html  Project-Laboratory-Algorithms-and-Data-Structures.html  README.md  Software-Engineering.html  Switcher.html  index.html  mkdocs.yml  sitemap.xml  链接.txt
.github/: PULL_REQUEST_TEMPLATE.md
2023-McDonald/: 程序设计实践-课程设计任务布置(麦当劳).pptx  麦当劳-题面V1.docx  麦当劳OJ版v2.3.c
2023-McDonald/McDonald/: CMakeLists.txt  Data_Structure.h  McDonald_zh_CN.ts  image.qrc  input.cpp  input.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  order_window.cpp  order_window.h  order_window.ui  work.cpp  work.h
2023-McDonald/McDonald/可执行文件/: output.txt
Advanced-Labs-in-Compilers/: index.html
Advanced-Labs-in-Computer-Architecture/: index.html
Advanced-Labs-in-Computer-Networks/: index.html
Advanced-Labs-in-Database/: index.html
Advanced-Labs-in-Operating-Systems/: index.html
Bupt_2021_scs_exp_and_text/: README.md
C++/: index.html
Compilers/: index.html
Computer-Architecture/: index.html
Computer-Networks/: index.html
Computer-Organization/: index.html
Data-Science/: index.html
Data-Structures/: index.html
Data-War-and-Data-Mining/: index.html
Database/: index.html
Formal-Language/: index.html
Info-Know/: index.html
Introduction-to-Computing-and-Foundation-of-Programming/: index.html
Introduction-to-Computing-and-Foundation-of-Programming-Exp/: index.html
Java/: index.html
Linux/: index.html
Mobile-Internet-Technology-and-Application/: index.html
NLP/: index.html
Network-Practice/: index.html
Operating-Systems/: index.html
Program-Practice/: index.html
Project-Laboratory-Algorithms-and-Data-Structures/: index.html
Python/: index.html
Software-Engineering/: index.html
Switcher/: index.html
Web/: index.html
Web-Backend/: index.html
projects/: Advanced-Labs-in-Compilers.md  Advanced-Labs-in-Computer-Architecture.md  Advanced-Labs-in-Computer-Networks.md  Advanced-Labs-in-Database.md  Advanced-Labs-in-Operating-Systems.md  Alogrithm.md  C++.md  CSAPP.md  Compilers.md  Computer-Architecture.md  Computer-Networks.md  Computer-Organization.md  Data-Science.md  Java.md  (+21 more)
(+132 files in other folders)
